Fix images in SRS2 document

--- a/docs/latex/SRSv2.tex
+++ b/docs/latex/SRSv2.tex
@@ -73,7 +73,7 @@ tabsize=2,
     {\huge\bfseries Blix - AI Photo Editor\par}
     \begin{figure}[h]
         \centering % center the image
-        \includegraphics[width=0.5\textwidth]{blix.png}
+        \includegraphics[width=0.5\textwidth]{../pics/blix.png}
     \end{figure}
     \vspace{2.5cm}
     {\Large\itshape The Spanish Inquisition\par}
@@ -245,21 +245,24 @@ campaigns and advertisements.
 \subsubsection*{Project Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}{\includegraphics[width=0.55\textwidth]{Project-subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
+    {\includegraphics[width=0.55\textwidth]{../diagramPng/Project-subsystem.png}}
 \end{figure}
 
 \addcontentsline{toc}{subsection}{Layout Subsystem}
 \subsubsection*{Layout Subsystem}
 \begin{figure}[htbp]
     \centering
-      \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}{\includegraphics[width=0.8\textwidth]{Layout-Subsystem.png}}
+      \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
+      {\includegraphics[width=0.8\textwidth]{../diagramPng/Layout-Subsystem.png}}
 \end{figure}
 
 \addcontentsline{toc}{subsection}{Graph Management Subsystem}
 \subsubsection*{Graph Management Subsystem}
 \begin{figure}[htbp]
   \centering
-  \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}{\includegraphics[width=0.8\textwidth]{ Graph-Subsystem.png}}
+  \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
+  {\includegraphics[width=0.8\textwidth]{../diagramPng/Graph-Subsystem.png}}
 \end{figure}
 
 
@@ -267,7 +270,8 @@ campaigns and advertisements.
 \subsubsection*{NLP Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}{\includegraphics[width=0.61\textwidth]{ GraphParsing-Subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
+    {\includegraphics[width=0.61\textwidth]{../diagramPng/Graph Parsing-Subsystem.png}}
 \end{figure}
 
 \pagebreak
@@ -275,7 +279,8 @@ campaigns and advertisements.
 \subsubsection*{User Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}{\includegraphics[width=0.95\textwidth]{ User-Subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/1rnYMSGTOmKY8_pOyJUIacjTxuubO_6NX}
+    {\includegraphics[width=0.95\textwidth]{../diagramPng/User-Subsystem.png}}
 \end{figure}
 
 \pagebreak
@@ -372,33 +377,38 @@ to have} requirements.
 \subsubsection*{Project Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}{\includegraphics[width=1\textwidth]{Usecase Project-Subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
+    {\includegraphics[width=1\textwidth]{../diagramPng/Usecase Project-Subsystem.png}}
 \end{figure}
 
 \pagebreak
 \subsubsection*{Layout Subsystem}
 \begin{figure}[htbp]
     \centering
-     \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}{\includegraphics[width=1\textwidth]{Usecase Layout-Subsystem.png}}
+     \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
+     {\includegraphics[width=1\textwidth]{../diagramPng/Usecase Layout-Subsystem.png}}
 \end{figure}
 
 \subsubsection*{Graph Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}{\includegraphics[width=0.6\textwidth]{Usecase Graph-Subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
+    {\includegraphics[width=0.6\textwidth]{../diagramPng/Usecase Graph-Subsystem.png}}
 \end{figure}
 
 \pagebreak
 \subsubsection*{Image Processing Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}{\includegraphics[width=0.6\textwidth]{UseCase Image-Subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
+    {\includegraphics[width=0.6\textwidth]{../diagramPng/UseCase Image-Subsystem.png}}
 \end{figure}
 
 \subsubsection*{User Management Subsystem}
 \begin{figure}[htbp]
     \centering
-    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}{\includegraphics[width=0.6\textwidth]{Usecase User-Subsystem.png}}
+    \href{https://drive.google.com/drive/u/2/folders/18FJi5U-PEzTiB-SsYfPQOV304R0K7s3H}
+    {\includegraphics[width=0.6\textwidth]{../diagramPng/Usecase User-Subsystem.png}}
 \end{figure}
 
 
